--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
     - pip install pytest
 #
 # Command to run tests, e.g. python setup.py test
-script: pytest tests/test_addition.py
+script: pytest tests/
 
 # Assuming you have installed the travis-ci CLI tool, after you
 # create the Github repo and add it to Travis, run the
