--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,10 @@ install:
     - pip install pytest
 #
 # Command to run tests, e.g. python setup.py test
-script: pytest tests/
+script: 
+    - pip show xarray | grep Version
+    - pip show netCDF4 | grep Version
+    - pytest tests/
 
 
 #install:
